option go_package = "./protopb";

message TopAndBottomRatingAvg {
  optional string title_top = 1;
  optional string title_bottom = 2;
  optional double rating_avg_top = 3;
  optional double rating_avg_bottom = 4;
  optional bool eof = 5;
}